--- a/css/main.css
+++ b/css/main.css
@@ -6,26 +6,34 @@
     src: url("//db.onlinewebfonts.com/t/3ada9815c06d2619d52d16a5601c96b2.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/3ada9815c06d2619d52d16a5601c96b2.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/3ada9815c06d2619d52d16a5601c96b2.woff") format("woff"), url("//db.onlinewebfonts.com/t/3ada9815c06d2619d52d16a5601c96b2.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/3ada9815c06d2619d52d16a5601c96b2.svg#Early GameBoy") format("svg");
 }
 body {
+    background-image: url('../css/images/Official\ Background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
     background-color: black;
-    margin: 0;
     padding: 0;
+    display: flex;
+    justify-content: center;
+    margin-top: 10vh;
 }
 #board {
     background-image: url('./images/Zelda\ Image.webp');
-    height: 100vh;
+    background-size: cover;
+    border: solid;
+    width:80vw;
+    height: 80vh;
     position: relative;
 }
 
 #start-button {
-    position: relative;
-    left: 40%;
-    top: 50%;
-    min-width: 20vw;
-    min-height: 10vh;
     font-family: 'Early Gameboy';
     font-size: 1.7em;
     background-color: aliceblue;
     border: solid, black;
+    width: 20vw;
+    height: 10vh;
+    position: absolute;
+    left: 30vw;
+    top: 35vh;
     -webkit-appearance: none;
 }
 
@@ -33,8 +41,9 @@ body {
     background-image: url('./images/Link_funny-removebg-preview.png');
     background-size: contain;
     background-repeat: no-repeat;
-    position: absolute;
     border-radius: 10;
+    position: absolute;
+
 }
 
 .obstacle1 {
@@ -54,12 +63,12 @@ body {
 #score-board {
     background-color: aliceblue;
     font-family: 'Early Gameboy';
+    text-align: center;
     border: solid;
     padding: 5px;
     position: absolute;
-    left: 80%;
-    top: 5%;
-    text-align: center;
+    left: 60vw;
+    top: 5vh;
 }
 
 #score {
@@ -73,8 +82,8 @@ body {
     border: solid;
     position: absolute;
     padding-top: 8px;
-    left: 30vw;
-    top: 40vh;
+    left: 20vw;
+    top: 30vh;
     width: 40vw;
     height: 20vh;
  }
@@ -83,21 +92,18 @@ body {
     background-color: aliceblue;
     content: url(../css/images/pixilart-drawing\ \(1\).png);
     display:list-item;
-    border-bottom: solid;
  }
 
  #retry-button {
-    position: relative;
-    left: 38%;
-    top: 80%;
-    min-width: 20vw;
-    min-height: 10vh;
-    font-family: 'Early Gameboy';
-    font-size: 1.7em;
     background-color: aliceblue;
     border: solid, black;
-
+    font-family: 'Early Gameboy';
+    font-size: 1.7em;
+    position: absolute;
+    width: 20vw;
+    height: 10vh;
  }
+
  #win-message {
     background-color: aliceblue;
     font-family: 'Early Gameboy';
@@ -107,6 +113,35 @@ body {
     padding-top: 8px;
     left: 30vw;
     top: 40vh;
+    width: 40vw;
+    height: 20vh;   
+ }
+ #win-message::after {
+    content: url(../css/images/pixilart-drawing.png);
+    display: list-item;
+ }
+
+ #retry-button {
+    background-color: aliceblue;
+    border: solid, black;
+    font-family: 'Early Gameboy';
+    font-size: 1.7em;
+    position: relative;
+    top: 60vh;
+    left: 30vw;
+    min-width: 20vw;
+    min-height: 10vh;
+ }
+
+ #win-message {
+    background-color: aliceblue;
+    font-family: 'Early Gameboy';
+    text-align: center;
+    border: solid;
+    position: absolute;
+    padding-top: 8px;
+    left: 20vw;
+    top: 30vh;
     width: 40vw;
     height: 20vh;   
  }
